tests/neg-custom-args/captures/byname.check
-- Warning: tests/neg-custom-args/captures/byname.scala:17:18 ----------------------------------------------------------
17 |  def h(x: {cap1} -> I) = x // warning
   |                  ^
   |                  Style: by-name `->` should immediately follow closing `}` of capture set
   |                  to avoid confusion with function type.
   |                  That is, `{c}-> T` instead of `{c} -> T`.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/byname.scala:10:6 ----------------------------------------
10 |  h(f2()) // error
   |    ^^^^
   |    Found:    {cap1} (x$0: Int) -> Int
   |    Required: {cap2} Int -> Int
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/byname.scala:19:5 ----------------------------------------
19 |  h(g()) // error
   |    ^^^
   |    Found:    {cap2} () ?-> I
   |    Required: {cap1} () ?-> I
   |
   | longer explanation available when compiling with `-explain`
